refactor: clean the code

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -73,8 +73,8 @@ tbody > tr:nth-child(even) {
   cursor: pointer;
 }
 
-.openModalEditTaskButton,
-.deleteTaskButton {
+.openModalEditTaskButtons,
+.deleteTaskButtons {
   background: none;
   border: none;
 }
