--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -110,16 +110,35 @@ tr {
 
 .formLoginPage,
 .formRegisterPage {
-  position: absolute;
-  margin: 0;
+  position: relative;
+  margin: 0 auto;
   top: 50%;
   transform: translateY(-50%);
   border: 1px solid #68519d;
   border-radius: 0.5rem;
-  width: 35%;
-  left: 32.5%;
+  left: -60px;
+  width: 80%;
   box-shadow: 2px 2px 2px 1px rgba(48, 2, 54, 0.2);
 }
+
+section.animation, #taskEventModal.animation {
+  animation-name: slide;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide {
+  from {
+    opacity: 0;
+    translate: -20%
+  }
+
+  to {
+    opacity: 1;
+    translate: 0%
+  }
+}
+
 
 .formInputs {
   border: 1px solid #000000;
