style: containers size

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -41,8 +41,8 @@ tbody > tr:nth-child(even) {
 .modalEventButton,
 .loginUserButton,
 .registerUserButton,
-.registerButton, 
-.searchButtons, 
+.registerButton,
+.searchButtons,
 .pagenationButtons {
   background-color: white;
   color: #68519d;
@@ -52,7 +52,7 @@ tbody > tr:nth-child(even) {
 }
 
 .openModalNewTaskButton:hover,
-.registerUserButton:hover, 
+.registerUserButton:hover,
 .searchButtons:hover,
 .pagenationButtons:hover {
   background-color: #68519d;
@@ -117,11 +117,12 @@ tr {
   border: 1px solid #68519d;
   border-radius: 0.5rem;
   left: -60px;
-  width: 80%;
+  width: 35%;
   box-shadow: 2px 2px 2px 1px rgba(48, 2, 54, 0.2);
 }
 
-section.animation, #taskEventModal.animation {
+section.animation,
+#taskEventModal.animation {
   animation-name: slide;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
@@ -130,15 +131,14 @@ section.animation, #taskEventModal.animation {
 @keyframes slide {
   from {
     opacity: 0;
-    translate: -20%
+    translate: -20%;
   }
 
   to {
     opacity: 1;
-    translate: 0%
+    translate: 0%;
   }
 }
-
 
 .formInputs {
   border: 1px solid #000000;
@@ -223,77 +223,3 @@ td[value='Parado'] {
 .responseAPI {
   display: none;
 }
-
-/*#darkModeToggle {
-    width: 31.25rem;
-    height: 12.5rem;
-    position: relative;
-    display: block;
-    background: #ebebeb;
-    border-radius: 12.5rem;
-    box-shadow: inset 0px 0.313rem 0.938rem rgba(0, 0, 0, 0.4), inset 0px --0313rem 0.938rem rgba(255, 255, 255, 0.4);
-    cursor: pointer;
-}
-
-#darkModeToggle:after {
-  content: "";
-  width:11.25rem;
-  height: 11.25rem;
-  position: absolute;
-  top:0.625rem;
-  left:0.625rem;
-  background: linear-gradient(180deg,#ffcc89,#d8860b);
-  border-radius: 11.25rem;
-  box-shadow: 0px 0.313rem 0.626rem rgba(0,0,0,0.2);
-}
-
-#darkmode-toggle {
-  width: 0;
-  height: 0;
-  visibility: hidden;
-}
-
-#darkmode-toggle:checked + #darkModeToggle {
-  background: #242424;
-}
-
-#darkmode-toggle:checked + #darkModeToggle:after {
-  left:30.5rem;
-  transform: translateX(-100%);
-  background: linear-gradient(180deg,#777,#3a3a3a);
-}
-
-#darkModeToggle, #darkModeToggle:after {
-  transition: 0.3s
-}
-
-#darkModeToggle:active:after {
-  width: 16.25rem;
-}
-
-label svg {
-  position: absolute;
-  width: 7.5rem;
-  top:2.5rem;
-  z-index: 100;
-}
-label svg.sun {
-  left:2.5rem;
-  fill:#fff;
-  transition: 0.3s;
-}
-label svg.moon {
-  left:21.25rem;
-  fill:#7e7e7e;
-  transition: 0.3s;
-}
-input:checked + label svg.sun {
-  fill:#7e7e7e;
-}
-input:checked + label svg.moon {
-  fill:#fff;
-}
-
-.backgroundDarkMode {
-  background-color: rgb(36,36,36);
-}*/
